# cfg_manipulator

./: .clang-format  .travis.yml  LICENSE  Makefile  README.md  a.out  cfg_manipulator.cpp  cfg_manipulator.hpp  cm_includes.hpp  git_update.sh  main.cpp  settings.cfg
.travis_ci/: Makefile  a.out  main.cpp
linux/: cfg_manipulator.hpp
tests/OpenGL/: shaderLoader.cpp
tests/OpenGL/MinGW32/: CMakeLists.txt  glad.c  main.cpp  shaderLoader.hpp
tests/OpenGL/Visual Studio Community 2019/: .clang-format  CMakeLists.txt
tests/SFML(Windows)/: Makefile  cfg_manipulator.cpp  cfg_manipulator.hpp  cm_includes.hpp  main.cpp  settings.cfg
windows/: cfg_manipulator.cpp  cfg_manipulator.hpp  cm_includes.hpp
